--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,5 @@
 TODO:
 
-- M-+ and M-- for scaling text.
-
-- Consider .gitignore-ing for files in .emacs.d that change regularly (or have
-  those files elsewhere).
-
 - Modes and keybindings...
   General question: Do you want a generic-lispy-mode-map? Think about
   maps and modes -- does every mode have a map? If so you want a
@@ -27,6 +22,7 @@ TODO:
       commands for Clojure and other things? (I don't like this.)
 
 - Need a command for adding `...` around things.
+  (Or `...'? `foo` vs `foo' in lisp-mode.) 
 
 - C-x C-f is more aggressive than it used to be in finding things to match;
   it's taking me to kinda random places.
@@ -34,11 +30,6 @@ TODO:
 - Look at ~ files being created in same dir as files. Did this happen before?
 
 - Look at .emacs* files in home directory. (".emacs-places")
-
-- Fix "nomis-mac-keyboard-hacking".
-  Maybe comment out all that stuff.
-  Maybe don't call `smex`, but something that does either `smex` or the thing
-  that it replaces, depending on what's set up.
 
 - Get your nrepl hacking working with new nrepl. Consider doing it properly
   (fork the Git repository, etc) and creating pull requests.
