--- a/TODO.txt
+++ b/TODO.txt
@@ -4,7 +4,7 @@ TODO:
   General question: Do you want a generic-lispy-mode-map? Think about
   maps and modes -- does every mode have a map? If so you want a
   generic-lispy-mode (as the starter kit has, right?) (Or maybe KIES --
-  keep the modes separate and duplciate things) -- ah see this from "ido.el"...
+  keep the modes separate and duplicate things) -- ah see this from "ido.el"...
   ;; 
   ;; To modify the keybindings, use the ido-setup-hook.  For example:
   ;; (add-hook 'ido-setup-hook 'ido-my-keys)
