--- a/TODO.txt
+++ b/TODO.txt
@@ -1,23 +1,7 @@
 TODO:
 
-- Get rid of nomis-define-lispy-modes and make it easier to see what's
-  going on.
-  Maybe make clojure-mode, emacs-lisp-mode-hook and ielm-mode-hook
-  share more.
-  Starter kit has stuff for (scheme emacs-lisp lisp clojure).
-
-  - Modes and keybindings...
-    General question: Do you want a generic-lispy-mode-map? Think about
-    maps and modes -- does every mode have a map? If so you want a
-    generic-lispy-mode (as the starter kit has, right?) (Or maybe KIES --
-    keep the modes separate and duplicate things) -- ah see this from "ido.el"...
-    ;; 
-    ;; To modify the keybindings, use the ido-setup-hook.  For example:
-    ;; (add-hook 'ido-setup-hook 'ido-my-keys)
-    ;;
-    ;; (defun ido-my-keys ()
-    ;;  "Add my keybindings for ido."
-    ;;  (define-key ido-completion-map " " 'ido-next-match))
+- What's happened to repetition of keyboard macros? It used to do it
+  once; now it repeats until error (I think).
 
 - `nomis-nrepl-rearrange-string-into-lines`:
   - Not available everywhere with C-c C-f. Is there a good reason?
