Revert to Emacs 24.3.1 because of strange behaviour with keyboard macros.
See https://groups.google.com/forum/#!topic/gnu.emacs.help/8aNbFSNxoN4.

Details…

I've just upgraded from Emacs 24.2.1 to Emacs 24.3.1.

Full version details:
  "GNU Emacs 24.2.1 (x86_64-apple-darwin, NS apple-appkit-1038.36)
   of 2012-08-27 on bob.porkrind.org"
  and
  "GNU Emacs 24.3.1 (x86_64-apple-darwin, NS apple-appkit-1038.36)
   of 2013-03-13 on bob.porkrind.org"

If I have a buffer with some text that is repeated several times and do the following:
  - C-s   (isearch-forward)   to search for the repeated text
  - C-x (   (kmacro-start-macro)
  - Enter some new text
  - C-s C-s   to search again
  - C-x e  (kmacro-end-and-call-macro)
I get different behaviour in my old and new versions of Emacs.

In Emacs 24.2.1 and all previous versions I've used, kmacro-end-and-call-macro calls the macro once more, and I can go through the file making changes one at a time, and I can stop when I want.

In Emacs 24.3.1, kmacro-end-and-call-macro calls the macro repeatedly making changes to all the repeated text up to the end of the file.

Interestingly, if I define a similar keyboard macro that uses next-error rather than isearch-forward I get my changes one at a time.

Is this some bizarre new behaviour for isearch-forward? Can I get the old behaviour back?

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,12 @@
 TODO:
 
-- What's happened to repetition of keyboard macros? It used to do it
-  once; now it repeats until error (I think).
+- If you move back to Emacs 24.2.1, you'll need to revert some changes.
+  - The cl stuff.
+  - Anything else? -- No.
+
+- Report this bug...
+  - What's happened to repetition of keyboard macros? It used to do it
+    once; now it repeats until error (I think).
 
 - `nomis-nrepl-rearrange-string-into-lines`:
   - Not available everywhere with C-c C-f. Is there a good reason?
