--- a/TODO.txt
+++ b/TODO.txt
@@ -14,7 +14,10 @@ TODO:
 - Compiling
   - What about compiling these init files? And other ones you manually
     install?
+    - Ah, Emacs uses a "newer" check to see if recompilation is needed.
+      This isn't going to work for you.
   - Look at compiling things in for-me/nomis-addons.
+  - Look into any compilation errors and warnings.
 
 - Consider Emacs Prelude (or parts of it, like the project thing
   which allows grepping across a project).
