--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,11 @@
 TODO:
 
+- Report this bug in Emacs 24.3:
+  - Cycling windows doesn't find any windows.
+  - System Preferences » Keyboard » Keyboard Shortcuts » Keyboard and
+    Text Input. Look for Move focus to next window in application
+  - Command-`.
+
 - Report this bug...
   - What's happened to repetition of keyboard macros? It used to do it
     once; now it repeats until error (I think).
