--- a/TODO.org
+++ b/TODO.org
@@ -44,3 +44,37 @@
 *** Not so: even within Clojure, doc strings and your HTML strings are different.
 *** Maybe the command can see what mode is active? (I like this.)
 *** Maybe C-c C-f should handle the difference by being bound to different commands for Clojure and other things? (I don't like this.)
+* TODO Emacs 26 new things to look at if you remember
+** New mode line constructs '%o' and '%q', and user option
+'mode-line-percent-position'.  '%o' displays the "degree of travel" of
+the window through the buffer.  Unlike the default '%p', this
+percentage approaches 100% as the window approaches the end of the
+buffer.  '%q' displays the percentage offsets of both the start and
+the end of the window, e.g. "5-17%".  The new option
+'mode-line-percent-position' makes it easier to switch between '%p',
+'%P', and these new constructs.
+** Emacs can now auto-save buffers to visited files in a more robust
+manner via the new mode 'auto-save-visited-mode'.  Unlike
+'auto-save-visited-file-name', this mode uses the normal saving
+procedure and therefore obeys saving hooks.
+'auto-save-visited-file-name' is now obsolete.
+** Emacs 26.1 comes with Org v9.1.6.
+See the file ORG-NEWS for user-visible changes in Org.
+** hideshow mode got four key bindings that are analogous to outline
+mode bindings: 'C-c @ C-a', 'C-c @ C-t', 'C-c @ C-d', and 'C-c @ C-e'.
+** New Elisp data-structure library 'radix-tree'.
+** New minor mode 'pixel-scroll-mode' provides smooth pixel-level scrolling.
+** New function 'add-variable-watcher' can be used to call a function
+when a symbol's value is changed.  This is used to implement the new
+debugger command 'debug-on-variable-change'.
+** Support for side windows is now official.  The display action
+function 'display-buffer-in-side-window' will display its buffer in a
+side window.  Functions for toggling all side windows on a frame,
+changing and reversing the layout of side windows and returning the
+main (major non-side) window of a frame are provided.  For details
+consult the section "(elisp) Side Windows" in the ELisp manual.
+** 'if-let' and 'when-let' now support binding lists as defined by the
+SRFI-2 (Scheme Request for Implementation 2).
+** New function 'add-variable-watcher' can be used to call a function
+when a symbol's value is changed.  This is used to implement the new
+debugger command 'debug-on-variable-change'.
