--- a/emacs-configuration/emacs-installation/emacs-init-files/test/org-test.org
+++ b/emacs-configuration/emacs-installation/emacs-init-files/test/org-test.org
@@ -44,3 +44,12 @@ Some body text
 **** H 4-2-3-2
 *** H 4-2-4
 ** H 4-3
+* H 5
+** H 5-1
+*** H 5-1-1
+* H 6
+** H 6-1
+*** H 6-1-1
+* H 7
+| Here's a table | Try <tab>      |
+|                | And <shifttab> |
